<resources>
    <string name="app_name">Socialish</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Login</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lacus velit, molestie eu risus non, gravida placerat metus. Fusce gravida magna eu porta mollis. Sed mollis eget turpis tempus aliquet. Cras id justo at lorem venenatis efficitur. Suspendisse posuere purus sed justo pharetra, vel aliquam nisl porta. Praesent in sollicitudin nibh, id aliquam massa. In hac habitasse platea dictumst. Cras ultrices vel nisi non vestibulum. Donec eget est sed lorem luctus ornare. Nam nec velit est. Mauris id vulputate augue.</string>
    <string name="title_blank_error">Post title cannot be blank</string>
    <string name="logout">Logout</string>
    <string name="display_name">Display Name</string>
    <string name="no_posts_written">No posts written.</string>
    <string name="no_posts_saved">No posts saved.</string>
    <string name="create_post">Create Post</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="new_post">New Post</string>
    <string name="submit_post">Submit Post</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="post_image_preview">Post Image Preview</string>
    <string name="no_image">No Image</string>
    <string name="add_image">Add Image</string>
    <string name="save_button">Save button</string>
    <string name="share_button">Share button</string>
    <string name="post_image">Post image</string>
    <string name="my_posts">My Posts</string>
    <string name="saved">Saved</string>
    <string name="no_saved_posts">No Posts Saved</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="delete_post_button">Delete post button</string>


</resources>